a useful commit message

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 	<link rel="stylesheet" href="anim.css">
 </head>
 <body>
-	<section class="pen"></section>
+	<section class="pen">
+		<div class="wa-input-container">
+			
+		</div>
+	</section>
 	<section class="credit">
 		<p>Best viewed in Google Chrome</p>
 		<p>Code by <a href="http://twitter.com/vsxed" target="_blank" class="credit-link">Eduard Mayer</a></p>
@@ -17,3 +21,5 @@
 	<script src="menu.js"></script>
 </body>
 </html>
+
+jo
