added android-like input field

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 	<section class="pen">
 		<div class="wa-input-container">
-			
+			<div class="wa-input">
+				<input type="text">
+			</div>
 		</div>
 	</section>
 	<section class="credit">
