Added counter and hover action with animated background

--- a/index.html
+++ b/index.html
@@ -9,8 +9,41 @@
 <body>
 	<section class="pen">
 		<div class="wa-input-container">
+			
+			<div class="speech-container">
+				<span class="time">0:00</span>
+			</div>
+
 			<div class="wa-input">
 				<input type="text">
+			</div>
+			<div class="ptt-icon emoticon">
+				<svg xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Ebene_1" x="0px" y="0px" width="115.465px" height="115.537px" viewBox="0 0 115.465 115.537" enable-background="new 0 0 115.465 115.537" xml:space="preserve">
+					<metadata>
+						<sfw xmlns="http://ns.adobe.com/SaveForWeb/1.0/">
+							<slices/>
+							<sliceSourceBounds height="16383" width="16383" y="-8367" x="-8016" bottomLeftOrigin="true"/>
+						</sfw>
+					</metadata>
+					<g>
+						<g>
+							<path fill-rule="evenodd" clip-rule="evenodd" fill="#999999" d="M42.082 56.833c4.054 0 7.338-4.93 7.338-11.008 s-3.284-11.008-7.338-11.008s-7.338 4.929-7.338 11.008S38.028 56.8 42.1 56.833z M73.532 56.8 c4.054 0 7.338-4.93 7.338-11.008s-3.284-11.008-7.338-11.008s-7.338 4.929-7.338 11.008S69.478 56.8 73.5 56.833z M26.685 64.498c0 0 1.3 28.2 31.4 28.174c30.14 0 30.467-27.846 30.467-27.846s-20.106 2.293-30.262 2.3 S26.685 64.5 26.7 64.498z M58.063 80.223c-18.249 0-26.792-9.5-26.792-9.5s18.315 1.5 27 1.5 s25.778-1.282 25.778-1.282S73.69 80.2 58.1 80.223z M58.332 1.271c-31.555 0-57.133 25.579-57.133 57.1 s25.579 57.1 57.1 57.133s57.133-25.579 57.133-57.133S89.886 1.3 58.3 1.271z M58.332 107.9 C30.977 107.9 8.8 85.8 8.8 58.404c0-27.357 22.177-49.532 49.532-49.532c27.357 0 49.5 22.2 49.5 49.5 C107.863 85.8 85.7 107.9 58.3 107.936z"/>
+						</g>
+					</g>
+				</svg>
+			</div>
+			<div class="ptt-icon record-right">
+				<svg xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Ebene_1" x="0px" y="0px" width="195.835px" height="270px" viewBox="0 0 195.835 270" enable-background="new 0 0 195.835 270" xml:space="preserve">
+					<metadata>
+						<sfw xmlns="http://ns.adobe.com/SaveForWeb/1.0/">
+							<slices/>
+							<sliceSourceBounds height="16383" width="16383" y="-8367" x="-8016" bottomLeftOrigin="true"/>
+						</sfw>
+					</metadata>
+					<g>
+						<path class="record-icon" fill-rule="evenodd" clip-rule="evenodd" d="M171.838 129.146c-0.41 40.426-33.293 73.074-73.815 73.1 s-73.405-32.648-73.815-73.074H1.383c1.192 47.7 36.8 86.9 82.9 93.726v45.572h28.163v-45.521 c46.328-6.627 82.124-45.903 83.319-93.777H171.838z M98.783 170.251c22.699 0 41.104-18.399 41.104-41.104V43.133 c0-22.705-18.405-41.104-41.104-41.104c-22.698 0-41.104 18.399-41.104 41.104v86.014 C57.68 151.9 76.1 170.3 98.8 170.251z"/>
+					</g>
+				</svg>
 			</div>
 		</div>
 	</section>
@@ -20,6 +53,6 @@
 		<a href="http://vsxed.github.io/whatsapp-ptt-animation" target="_blank" class="credit-link button">View it on Github</a> <a href="https://github.com/vsxed/whatsapp-ptt-animation" target="_blank" class="credit-link button">Fork it on Github</a>
 	</section>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-	<script src="menu.js"></script>
+	<script src="function.js"></script>
 </body>
 </html>
