Added jQuery UI's Draggable
Also set an if condition to get an alert when a certain point is
reached.
Changed the trigger behaviour from mouseover to click to prevent
senseless animation starts while reloading the page (just for debuggin
i think)

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 		<a href="http://vsxed.github.io/whatsapp-ptt-animation" target="_blank" class="credit-link button">View it on Github</a> <a href="https://github.com/vsxed/whatsapp-ptt-animation" target="_blank" class="credit-link button">Fork it on Github</a>
 	</section>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>	
 	<script src="function.js"></script>
 </body>
 </html>
