added some fancy animation, still need to figure some things out and add another vector symbol

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 			<div class="speech-container">
 				<span class="time">0:00</span>
 			</div>
-
 			<div class="wa-input">
 				<input type="text">
 			</div>
@@ -42,6 +41,19 @@
 					</metadata>
 					<g>
 						<path class="record-icon" fill-rule="evenodd" clip-rule="evenodd" d="M171.838 129.146c-0.41 40.426-33.293 73.074-73.815 73.1 s-73.405-32.648-73.815-73.074H1.383c1.192 47.7 36.8 86.9 82.9 93.726v45.572h28.163v-45.521 c46.328-6.627 82.124-45.903 83.319-93.777H171.838z M98.783 170.251c22.699 0 41.104-18.399 41.104-41.104V43.133 c0-22.705-18.405-41.104-41.104-41.104c-22.698 0-41.104 18.399-41.104 41.104v86.014 C57.68 151.9 76.1 170.3 98.8 170.251z"/>
+					</g>
+				</svg>
+			</div>
+			<div class="ptt-icon record-left hide">
+				<svg xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Ebene_1" x="0px" y="0px" width="195.835px" height="270px" viewBox="0 0 195.835 270" enable-background="new 0 0 195.835 270" xml:space="preserve">
+					<metadata>
+						<sfw xmlns="http://ns.adobe.com/SaveForWeb/1.0/">
+							<slices/>
+							<sliceSourceBounds height="16383" width="16383" y="-8367" x="-8016" bottomLeftOrigin="true"/>
+						</sfw>
+					</metadata>
+					<g>
+						<path class="record-icon-red" fill-rule="evenodd" clip-rule="evenodd" d="M171.838 129.146c-0.41 40.426-33.293 73.074-73.815 73.1 s-73.405-32.648-73.815-73.074H1.383c1.192 47.7 36.8 86.9 82.9 93.726v45.572h28.163v-45.521 c46.328-6.627 82.124-45.903 83.319-93.777H171.838z M98.783 170.251c22.699 0 41.104-18.399 41.104-41.104V43.133 c0-22.705-18.405-41.104-41.104-41.104c-22.698 0-41.104 18.399-41.104 41.104v86.014 C57.68 151.9 76.1 170.3 98.8 170.251z"/>
 					</g>
 				</svg>
 			</div>
