--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<section class="pen">
 		<div class="wa-input-container">
-			
+			<div class="input-bg"></div>
 			<div class="speech-container">
 				<span class="time">0:00</span>
 			</div>
@@ -25,9 +25,7 @@
 						</sfw>
 					</metadata>
 					<g>
-						<g>
-							<path fill-rule="evenodd" clip-rule="evenodd" fill="#999999" d="M42.082 56.833c4.054 0 7.338-4.93 7.338-11.008 s-3.284-11.008-7.338-11.008s-7.338 4.929-7.338 11.008S38.028 56.8 42.1 56.833z M73.532 56.8 c4.054 0 7.338-4.93 7.338-11.008s-3.284-11.008-7.338-11.008s-7.338 4.929-7.338 11.008S69.478 56.8 73.5 56.833z M26.685 64.498c0 0 1.3 28.2 31.4 28.174c30.14 0 30.467-27.846 30.467-27.846s-20.106 2.293-30.262 2.3 S26.685 64.5 26.7 64.498z M58.063 80.223c-18.249 0-26.792-9.5-26.792-9.5s18.315 1.5 27 1.5 s25.778-1.282 25.778-1.282S73.69 80.2 58.1 80.223z M58.332 1.271c-31.555 0-57.133 25.579-57.133 57.1 s25.579 57.1 57.1 57.133s57.133-25.579 57.133-57.133S89.886 1.3 58.3 1.271z M58.332 107.9 C30.977 107.9 8.8 85.8 8.8 58.404c0-27.357 22.177-49.532 49.532-49.532c27.357 0 49.5 22.2 49.5 49.5 C107.863 85.8 85.7 107.9 58.3 107.936z"/>
-						</g>
+						<path fill-rule="evenodd" clip-rule="evenodd" fill="#999999" d="M42.082 56.833c4.054 0 7.338-4.93 7.338-11.008 s-3.284-11.008-7.338-11.008s-7.338 4.929-7.338 11.008S38.028 56.8 42.1 56.833z M73.532 56.8 c4.054 0 7.338-4.93 7.338-11.008s-3.284-11.008-7.338-11.008s-7.338 4.929-7.338 11.008S69.478 56.8 73.5 56.833z M26.685 64.498c0 0 1.3 28.2 31.4 28.174c30.14 0 30.467-27.846 30.467-27.846s-20.106 2.293-30.262 2.3 S26.685 64.5 26.7 64.498z M58.063 80.223c-18.249 0-26.792-9.5-26.792-9.5s18.315 1.5 27 1.5 s25.778-1.282 25.778-1.282S73.69 80.2 58.1 80.223z M58.332 1.271c-31.555 0-57.133 25.579-57.133 57.1 s25.579 57.1 57.1 57.133s57.133-25.579 57.133-57.133S89.886 1.3 58.3 1.271z M58.332 107.9 C30.977 107.9 8.8 85.8 8.8 58.404c0-27.357 22.177-49.532 49.532-49.532c27.357 0 49.5 22.2 49.5 49.5 C107.863 85.8 85.7 107.9 58.3 107.936z"/>
 					</g>
 				</svg>
 			</div>
@@ -56,6 +54,32 @@
 						<path class="record-icon-red" fill-rule="evenodd" clip-rule="evenodd" d="M171.838 129.146c-0.41 40.426-33.293 73.074-73.815 73.1 s-73.405-32.648-73.815-73.074H1.383c1.192 47.7 36.8 86.9 82.9 93.726v45.572h28.163v-45.521 c46.328-6.627 82.124-45.903 83.319-93.777H171.838z M98.783 170.251c22.699 0 41.104-18.399 41.104-41.104V43.133 c0-22.705-18.405-41.104-41.104-41.104c-22.698 0-41.104 18.399-41.104 41.104v86.014 C57.68 151.9 76.1 170.3 98.8 170.251z"/>
 					</g>
 				</svg>
+			</div>
+			<div class="bin">
+				<div class="ptt-icon bin-head">
+					<svg xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Ebene_1" x="0px" y="0px" width="115.465px" height="115.537px" viewBox="0 0 115.465 115.537" enable-background="new 0 0 115.465 115.537" xml:space="preserve">
+						<metadata>
+							<sfw xmlns="http://ns.adobe.com/SaveForWeb/1.0/">
+								<slices/>
+								<sliceSourceBounds x="139.2" y="190.5" width="71.6" height="36.7" bottomLeftOrigin="true"/>
+							</sfw>
+						</metadata>
+						<g>
+							<path class="record-icon" fill="#333333" d="M73.199 21.749V9.903c0-2.139-1.751-3.906-3.903-3.906H45.853c-2.137 0-3.897 1.767-3.897 3.906v11.98 c-11.59 1.315-19.525 3.977-19.525 7.061V34.8c0 1.2 1.2 2.3 3.4 3.375c5.717 2.7 18.1 4.5 32.4 4.5 c14.332 0 26.686-1.862 32.41-4.549c2.17-1.031 3.397-2.174 3.397-3.375v-5.855C94.034 25.8 85.5 23 73.2 21.749z M49.45 21.258l-0.988 0.062v-4.907c0-2.146 0.299-3.902 0.653-3.902c0.364 0 2.4 0 4.6 0h7.812c2.139 0 4.2 0 4.6 0 c0.359 0 0.7 1.8 0.7 3.902v4.828c-2.716-0.141-5.542-0.229-8.467-0.229C55.196 21 52.3 21.1 49.5 21.258z"/>
+						</g>
+					</svg>
+				</div>
+				<div class="ptt-icon bin-base">
+					<svg xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Ebene_1" x="0px" y="0px" width="115.465px" height="115.537px" viewBox="0 0 115.465 115.537" enable-background="new 0 0 115.465 115.537" xml:space="preserve">
+						<metadata>
+							<sfw xmlns="http://ns.adobe.com/SaveForWeb/1.0/">
+								<slices/>
+								<sliceSourceBounds x="143.5" y="124.7" width="63" height="61.8" bottomLeftOrigin="true"/>
+						</sfw>
+						</metadata>
+						<g><path class="record-icon" fill="#333333" d="M89.695 48.006c-0.069-0.423-0.328-0.837-0.716-1.234c-3.127 3.178-15.71 3.703-30.753 3.7 s-27.614-0.525-30.754-3.703c-0.387 0.397-0.627 0.811-0.715 1.234h-0.03l0.009 0.229c0 0.026-0.009 0.053-0.009 0.1 c0 0.1 0 0.1 0 0.175l2.448 50.169h0.006c0.218 3.9 4.7 9.9 29 9.88c24.3 0 28.807-5.946 29.019-9.88h0.018 l2.451-50.169c0.005-0.059 0.023-0.114 0.023-0.175c0-0.027-0.019-0.054-0.019-0.08l0.019-0.229H89.695z"/></g>
+					</svg>
+				</div>
 			</div>
 		</div>
 	</section>
