--- a/index.html
+++ b/index.html
@@ -82,12 +82,17 @@
 				</div>
 			</div>
 		</div>
+		<div class="start-here">
+			<p>Click here to get started</p>
+			<div class="circle"></div>
+		</div>
 	</section>
 	<section class="credit">
 		<p>Best viewed in Google Chrome</p>
 		<p>Code by <a href="http://twitter.com/vsxed" target="_blank" class="credit-link">Eduard Mayer</a></p>
 		<a href="http://vsxed.github.io/whatsapp-ptt-animation" target="_blank" class="credit-link button">View it on Github</a> <a href="https://github.com/vsxed/whatsapp-ptt-animation" target="_blank" class="credit-link button">Fork it on Github</a>
 	</section>
+	<section class="tutorial-dimmer"></section>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>	
 	<script src="function.js"></script>
